@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-01-28T17:43:34Z",
-  "count_outdated" : 10272,
-  "uniques_outdated" : 5220,
-  "count" : 10588,
-  "uniques" : 5291,
+  "timestamp" : "2026-01-30T02:32:52Z",
+  "count_outdated" : 10273,
+  "uniques_outdated" : 5221,
+  "count" : 10592,
+  "uniques" : 5295,
   "clones" : [
-    {
-      "timestamp": "2026-01-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2026-01-15T00:00:00Z",
       "count": 14,
@@ -130,6 +121,15 @@
       "uniques": 30,
       "uniques_minmax": [ 30, 30 ],
       "uniques_decinc": [ 0, 30 ]
+    },
+    {
+      "timestamp": "2026-01-28T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
