@@ -1,12 +1,7 @@
 {
-  "count": 316,
-  "uniques": 65,
+  "count": 319,
+  "uniques": 68,
   "clones": [
-    {
-      "timestamp": "2026-01-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2026-01-15T00:00:00Z",
       "count": 14,
@@ -71,6 +66,11 @@
       "timestamp": "2026-01-27T00:00:00Z",
       "count": 230,
       "uniques": 30
+    },
+    {
+      "timestamp": "2026-01-28T00:00:00Z",
+      "count": 4,
+      "uniques": 4
     }
   ]
 }
